Expose jetty mbeans configs

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jmx</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
         <!-- For ConfigurationProperties metadata -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
