--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 
     <groupId>com.oneops</groupId>
     <artifactId>keywhiz-proxy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>keywhiz-proxy</name>
+    <name>OneOps Keywhiz Proxy</name>
     <description>A secure proxy service for Keywhiz CLI.</description>
     <url>https://github.com/oneops/keywhiz-proxy</url>
 
@@ -41,7 +41,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
+        <version>1.5.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -49,13 +49,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <autovalue.version>1.2</autovalue.version>
-        <ldaptive.version>1.2.1</ldaptive.version>
+        <autovalue.version>1.4.1</autovalue.version>
+        <ldaptive.version>1.2.2</ldaptive.version>
         <jsr305.version>3.0.2</jsr305.version>
         <guava.version>22.0</guava.version>
-        <okhttp.version>3.8.0</okhttp.version>
+        <okhttp.version>3.8.1</okhttp.version>
         <togglz.version>2.4.1.Final</togglz.version>
-        <commonlang.version>3.5</commonlang.version>
+        <commonlang.version>3.6</commonlang.version>
         <postgresql.version>9.3-1104-jdbc4</postgresql.version>
         <hikaricp.version>2.6.3</hikaricp.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
