Handle optional xml media type.

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
             <artifactId>jackson-datatype-guava</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- For XML support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <!-- String utils -->
         <dependency>
             <groupId>org.apache.commons</groupId>
