Systemd env config file template.

--- a/contrib/init/systemd/keywhiz-proxy.service
+++ b/contrib/init/systemd/keywhiz-proxy.service
@@ -13,7 +13,7 @@ Type=simple
 # PIDFile=/var/run/keywhiz-proxy.pid
 # Environment=name=keywhiz-proxy
 # Environment=PATH=/usr/bin:/usr/sbin
-EnvironmentFile=-/etc/sysconfig/keywhiz-proxy
+EnvironmentFile=-/secrets/keywhiz-proxy-env
 WorkingDirectory=/opt/oneops/keywhiz-proxy/
 ExecStart=/bin/java -server \
                     -Xms2000m -Xmx6000m \
@@ -21,8 +21,7 @@ ExecStart=/bin/java -server \
                     -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:/log/gclogs/keywhiz-proxy-gc.log  \
                     -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=15 -XX:GCLogFileSize=10M \
                     -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/data/heap-dump/keywhiz-proxy.hprof \
-                    -jar /opt/oneops/keywhiz-proxy/$OO_LOCAL{keywhiz-proxy-artifact}-$OO_LOCAL{keywhiz-proxy-version}.jar \
-                    --spring.config.location=file:/secrets/application.yaml
+                    -jar /opt/oneops/keywhiz-proxy/$OO_LOCAL{keywhiz-proxy-artifact}-$OO_LOCAL{keywhiz-proxy-version}.jar
 ExecReload=/bin/kill -s HUP $MAINPID
 SuccessExitStatus=143
 KillMode=process
